--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "date-fns": "^2.25.0",
-    "glamor": "^2.20.40",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
